--- a/libcef/features/BUILD.gn
+++ b/libcef/features/BUILD.gn
@@ -87,12 +87,14 @@ buildflag_header("features") {
 }
 
 # Configuration for all targets that include CEF source code library-side.
+# See //cef/libcef_includes_config for CEF client-side configuration.
 config("config") {
-  # CEF sources use includes relative to the CEF root directory.
   include_dirs = [
+    # cef/include/ directory uses #includes relative to the cef/ directory.
     "//cef",
 
-    # CEF generates some header files that also need to be discoverable.
+    # CEF generated header files that also need to be discoverable.
+    # These #includes from library-side code will always be prefixed with cef/.
     "$root_build_dir/includes",
   ]
   defines = [
