chrome: Support CefSettings logging config (see #3685)
Also enables logging by default for Release builds (previously
required the `--enable-logging` flag). Logging can still be
disabled by passing the `--disable-logging` flag.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -349,6 +349,11 @@ patches = [
     'name': 'chrome_browser_profile_menu',
   },
   {
+    # chrome: Enable logging by default for Release builds.
+    # https://github.com/chromiumembedded/cef/issues/2969
+    'name': 'chrome_common_logging',
+  },
+  {
     # alloy: Don't require heap profiler for utility processes.
     # Avoids a DCHECK added in https://crrev.com/c21e9f71d1f2e
     'name': 'chrome_utility_client',
