chrome: Support CefResourceBundleHandler (see #3685)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -223,6 +223,9 @@ patches = [
     #
     # Apply dynamic light/dark theme changes to web content.
     # https://issues.chromium.org/issues/332328864#comment3
+    #
+    # Pass ui::ResourceBundle::Delegate to InitSharedInstanceWithLocale.
+    # https://github.com/chromiumembedded/cef/issues/3685
     'name': 'chrome_runtime',
   },
   {
@@ -741,6 +744,9 @@ patches = [
     #
     # mac: Add fallback for unsupported --lang values.
     # https://github.com/chromiumembedded/cef/issues/3653
+    #
+    # Pass ui::ResourceBundle::Delegate to InitSharedInstanceWithLocale.
+    # https://github.com/chromiumembedded/cef/issues/3685
     'name': 'mac_chrome_locale_3623'
   },
   {
