Revert unretained dangling ptr detector crash by default (fixes #3693)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -801,5 +801,12 @@ patches = [
     # Reverts
     # https://chromium-review.googlesource.com/c/chromium/src/+/5454331
     'name': 'win_partition_freelist_entry_336007395'
+  },
+  {
+    # Revert unretained dangling ptr detector crash by default.
+    # https://github.com/chromiumembedded/cef/issues/3693
+    # Reverts
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5351597
+    'name': 'base_allocator_unretained_dangling_ptr_5351597'
   }
 ]
