Revert unretained dangling ptr detector crash by default (fixes #3693)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -766,5 +766,12 @@ patches = [
     # It is a bit hacky, not suitable for merging into upstream.
     # https://chromium-review.googlesource.com/c/chromium/src/+/5302103
     'name': 'osr_win_remove_keyed_mutex_2575'
+  },
+  {
+    # Revert unretained dangling ptr detector crash by default.
+    # https://github.com/chromiumembedded/cef/issues/3693
+    # Reverts
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5351597
+    'name': 'base_allocator_unretained_dangling_ptr_5351597'
   }
 ]
