Fix dangling raw_ptr errors and related issues (see #3239)
- Use raw_ptr in class container fields.
- Use defined lifespan for StreamReaderURLLoader.
- Fix lifespan assumptions for WebContents/RFH usage.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -801,5 +801,10 @@ patches = [
     # https://issues.chromium.org/issues/340815319
     # https://chromium-review.googlesource.com/c/chromium/src/+/5542485
     'name': 'base_allocator_instance_tracer_5542485'
+  },
+  {
+    # Fix dangling raw_ptr errors.
+    # https://github.com/chromiumembedded/cef/issues/3239
+    'name': 'raw_ptr_3239'
   }
 ]
