Fix deadlock with enable_backup_ref_ptr_instance_tracer=true (see #3239)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -802,5 +802,11 @@ patches = [
     # Reverts
     # https://chromium-review.googlesource.com/c/chromium/src/+/5351597
     'name': 'base_allocator_unretained_dangling_ptr_5351597'
+  },
+  {
+    # Fix deadlock with enable_backup_ref_ptr_instance_tracer=true
+    # https://issues.chromium.org/issues/340815319
+    # https://chromium-review.googlesource.com/c/chromium/src/+/5542485
+    'name': 'base_allocator_instance_tracer_5542485'
   }
 ]
