osr: Support DevTools windows with Chrome runtime Alloy style (see #3681)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -252,6 +252,11 @@ patches = [
     'name': 'chrome_browser_context_menus',
   },
   {
+    # Support DevTools windows with Chrome runtime Alloy style OSR.
+    # https://github.com/chromiumembedded/cef/issues/3681
+    'name': 'chrome_browser_devtools_osr',
+  },
+  {
     # Support use of chrome native dialogs with CEF runtimes.
     # - Adds support for FileSelectHelper and SelectFileDialog interception.
     # - Adds additional type filters for dialogs created via FileSelectHelper.
