Fix deletion of third_party/test_fonts contents
See https://crbug.com/343199633

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -814,5 +814,10 @@ patches = [
     # RequestContextTest.PopupNavDestroyParentAfterCreationRCGlobal.
     # https://issues.chromium.org/issues/323753235#comment11
     'name': 'content_initiator_policy_323753235'
+  },
+  {
+    # Move test_fonts into their own directory.
+    # https://issues.chromium.org/issues/343199633
+    'name': 'DEPS'
   }
 ]
