win: Fix undefined symbol with cef_sandbox and VS 17.9.2 (see #3708)
This avoids a bug in clang + MSVC STL when using the default three-way
comparison operator with base::TimeDelta. The compiler does not throw
away the function call to the `std::_Literal_zero_is_expected` symbol,
which is deliberately undefined.

See also https://github.com/microsoft/STL/issues/4359#issuecomment-2042911928

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -819,5 +819,11 @@ patches = [
     # Move test_fonts into their own directory.
     # https://issues.chromium.org/issues/343199633
     'name': 'DEPS'
+  },
+  {
+    # win: Fix undefined std::_Literal_zero_is_expected() when building
+    # cef_sandbox with VS 17.9.2 version of MSVC STL.
+    # https://github.com/chromiumembedded/cef/issues/3708
+    'name': 'win_sandbox_op3way_3708'
   }
 ]
