Remove custom chrome scheme handling (see #3685)
- Add CEF info to existing chrome://version WebUI.
- Move chrome://license handling to WebUI.
- Remove chrome://webui-hosts; use chrome://chrome-urls instead.
- Remove chrome://extension-support; navigate to docs directly instead.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -333,6 +333,14 @@ patches = [
     'name': 'chrome_browser_safe_browsing',
   },
   {
+    # Support loading of chrome://license via WebUI.
+    'name': 'chrome_browser_webui_license',
+  },
+  {
+    # Support customization of chrome://version WebUI.
+    'name': 'chrome_browser_webui_version',
+  },
+  {
     # Add BrowserPluginGuest::owner_web_contents() method.
     'name': 'chrome_plugins',
   },
@@ -465,15 +473,6 @@ patches = [
     # BrowserTaskExecutor::Shutdown is called via CefContext::FinalizeShutdown.
     # This crash was introduced by https://crrev.com/5f6212babf.
     'name': 'browser_scheduler',
-  },
-  {
-    # Restore access to WebUIControllerFactory::UnregisterFactoryForTesting
-    # which was removed in https://crrev.com/5f183d6636. We can't use
-    # ScopedWebUIControllerFactoryRegistration because it pulls in GTest
-    # dependencies.
-    #
-    # Add accessor for WebUIConfigMap::webui_controller_factory_.
-    'name': 'browser_web_ui_controller_factory',
   },
   {
     # Add support for OSR rendering with Viz.
