Fix duplicate open from DevTools when handling OnOpenURLFromTab (fixes #3735)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -236,6 +236,10 @@ patches = [
     #
     # Linux: Fix duplicate symbol error for window_frame_util.cc
     # https://issuetracker.google.com/issues/343037853#comment3
+    #
+    # Avoid duplicate window from DevTools when CEF handles the open via
+    # OnOpenURLFromTab.
+    # https://github.com/chromiumembedded/cef/issues/3735
     'name': 'chrome_browser_browser',
   },
   {
