Fix duplicate open from DevTools when handling OnOpenURLFromTab (fixes #3735)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -233,6 +233,10 @@ patches = [
     # Fix fatal error: 'components/printing/common/print.mojom.h' file not found
     # From chrome/browser/ui/browser_commands.cc via
     # chrome/browser/printing/print_view_manager_common.h
+    #
+    # Avoid duplicate window from DevTools when CEF handles the open via
+    # OnOpenURLFromTab.
+    # https://github.com/chromiumembedded/cef/issues/3735
     'name': 'chrome_browser_browser',
   },
   {
