Fix DCHECK adding menu separator with hidden items (fixes #3577)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -829,5 +829,11 @@ patches = [
     # cef_sandbox with VS 17.9.2 version of MSVC STL.
     # https://github.com/chromiumembedded/cef/issues/3708
     'name': 'win_sandbox_op3way_3708'
+  },
+  {
+    # Fix DCHECK in SimpleMenuModel::AddSeparator when adding a separator with
+    # hidden menu items.
+    # https://github.com/chromiumembedded/cef/issues/3577
+    'name': 'ui_menu_model_3577'
   }
 ]
