Fix DCHECK adding menu separator with hidden items (fixes #3577)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -820,5 +820,11 @@ patches = [
     # loop. Related to the following CL:
     # https://chromium-review.googlesource.com/c/chromium/src/+/5548577
     'name': 'base_thread_pool_5548577'
+  },
+  {
+    # Fix DCHECK in SimpleMenuModel::AddSeparator when adding a separator with
+    # hidden menu items.
+    # https://github.com/chromiumembedded/cef/issues/3577
+    'name': 'ui_menu_model_3577'
   }
 ]
