Fix DCHECK adding menu separator with hidden items (fixes #3577)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -726,5 +726,11 @@ patches = [
     # Linux: Fix ARM build broken by build_tflite_with_xnnpack change.
     # https://issues.chromium.org/issues/348117454
     'name': 'linux_tflite_348117454'
+  },
+  {
+    # Fix DCHECK in SimpleMenuModel::AddSeparator when adding a separator with
+    # hidden menu items.
+    # https://github.com/chromiumembedded/cef/issues/3577
+    'name': 'ui_menu_model_3577'
   }
 ]
