--- a/tests/cefclient/resources/win/cefclient.rc
+++ b/tests/cefclient/resources/win/cefclient.rc
@@ -49,6 +49,7 @@ IDS_PERFORMANCE2_HTML BINARY "..\\performance2.html"
 IDS_PREFERENCES_HTML BINARY "..\\preferences.html"
 IDS_RESPONSE_FILTER_HTML BINARY "..\\response_filter.html"
 IDS_SERVER_HTML BINARY "..\\server.html"
+IDS_TASK_MANAGER_HTML BINARY "..\\task_manager.html"
 IDS_TRANSPARENCY_HTML BINARY "..\\transparency.html"
 IDS_URLREQUEST_HTML BINARY "..\\urlrequest.html"
 IDS_WEBSOCKET_HTML BINARY "..\\websocket.html"
