--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -227,6 +227,9 @@ patches = [
     # Linux: Fix duplicate symbol error for window_frame_util.cc
     # https://issuetracker.google.com/issues/343037853#comment3
     #
+    # Linux: Fix duplicate symbol error for tab_network_state.cc
+    # https://issuetracker.google.com/issues/353628440#comment8
+    #
     # Avoid duplicate window from DevTools when CEF handles the open via
     # OnOpenURLFromTab.
     # https://github.com/chromiumembedded/cef/issues/3735
@@ -721,11 +724,6 @@ patches = [
     # loop. Related to the following CL:
     # https://chromium-review.googlesource.com/c/chromium/src/+/5548577
     'name': 'base_thread_pool_5548577'
-  },
-  {
-    # Linux: Fix ARM build broken by build_tflite_with_xnnpack change.
-    # https://issues.chromium.org/issues/348117454
-    'name': 'linux_tflite_348117454'
   },
   {
     # Fix DCHECK in SimpleMenuModel::AddSeparator when adding a separator with
